# rekor-evm

./: .gitignore  README.md  sigstore-scroll-witness.ts
.github/workflows/: ci.yml
client/: .gitignore  go.mod  go.sum
client/cmd/prover-gsv/: main.go
client/cmd/submit-signed-tree-head/: main.go  rekor-witness-abi.json  util.go
client/prover/: aggregated.go  arb-rollup-abi.json  mod.go  util.go
contract/: hardhat.config.ts  package-lock.json  package.json
contract/contracts/: Base64.sol  P256.sol  Prover.sol  Rekor.sol
contract/ignition/modules/: Rekor.ts
contract/scripts/: deploy.ts
contract/test/: P256Verifier.txt  Rekor.ts
sigcheck/: Cargo.toml
sigcheck/src/: error.rs  main.rs  types.rs
