[package]
name = "sigcheck"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
alloy = { version = "0.2", features = ["full"] }
alloy-trie = "0.4"
alloy-primitives = "0.7"
alloy-rlp = "0.3"
axum = { version = "0.7.5", features = ["http1", "http2"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
anyhow = "1"
bytes = "1"
eyre = "0.6"
faster-hex = "0.9.0"
hex = "0.4"
lazy_static = "1"
nybbles = "0.2"
p256 = { version = "0.13", features = ["jwk"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sigstore = { version = "0.9", default-features = false, features = ["rekor"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ff = "0.12"

helios-common = { package = "common", git = "https://github.com/a16z/helios", rev = "aa35dba9dece9000427cf4bf178d0fabffecd392" }
helios-config = { package = "config", git = "https://github.com/a16z/helios", rev = "aa35dba9dece9000427cf4bf178d0fabffecd392" }
helios-consensus = { package = "consensus", git = "https://github.com/a16z/helios", rev = "aa35dba9dece9000427cf4bf178d0fabffecd392" }
zktrie = { git = "https://github.com/scroll-tech/zktrie", rev = "460b8c22af65b7809164548cba1e0253b6db5a70" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", rev = "a9e99a72a65d7c98e8a4258c2c94269c834d1c10" }
poseidon-base = { git = "https://github.com/scroll-tech/poseidon-circuit.git", rev = "01770178500b7d88d628ee058a0420cbc2f349d2" }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", rev = "e5ddf67e5ae16be38d6368ed355c7c41906272ab" }
